WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
176534
[Win] fast/canvas/2d.getPath.modification.html is failing.
https://bugs.webkit.org/show_bug.cgi?id=176534
Summary
[Win] fast/canvas/2d.getPath.modification.html is failing.
Per Arne Vollan
Reported
2017-09-07 10:00:52 PDT
We need to enable Inspector additions at runtime in order to expose the getPath function.
Attachments
Patch
(5.92 KB, patch)
2017-09-07 10:09 PDT
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Per Arne Vollan
Comment 1
2017-09-07 10:09:24 PDT
Created
attachment 320125
[details]
Patch
Per Arne Vollan
Comment 2
2017-09-07 12:01:50 PDT
Comment on
attachment 320125
[details]
Patch Thanks for reviewing!
WebKit Commit Bot
Comment 3
2017-09-07 12:30:47 PDT
Comment on
attachment 320125
[details]
Patch Clearing flags on attachment: 320125 Committed
r221746
: <
http://trac.webkit.org/changeset/221746
>
WebKit Commit Bot
Comment 4
2017-09-07 12:30:49 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2017-09-27 12:34:27 PDT
<
rdar://problem/34693512
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug