[Win] fast/canvas/2d.getPath.modification.html is failing. https://bugs.webkit.org/show_bug.cgi?id=176534

Reviewed by Alex Christensen.

We need to enable Inspector additions at runtime in order to expose the getPath function.

Source/WebKitLegacy/win:

* Interfaces/IWebPreferencesPrivate.idl:
* WebPreferenceKeysPrivate.h:
* WebPreferences.cpp:
(WebPreferences::initializeDefaultSettings):
(WebPreferences::setDataTransferItemsEnabled):
(WebPreferences::inspectorAdditionsEnabled):
(WebPreferences::setInspectorAdditionsEnabled):
* WebPreferences.h:
* WebView.cpp:
(WebView::notifyPreferencesChanged):

Tools:

* DumpRenderTree/win/DumpRenderTree.cpp:
(resetWebPreferencesToConsistentValues):


Canonical link: https://commits.webkit.org/193101@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@221746 268f45cc-cd09-0410-ab3c-d52691b4dbfc